Fix chart tooltip visual glitch when overlapping legend

--- a/assets/admin/reports.css
+++ b/assets/admin/reports.css
@@ -54,6 +54,7 @@
     color: #fff;
     border-radius: 2px;
     border: 1px solid #000;
+    z-index: 999;
 }
 
 .chartist-tooltip:before {
